# PlateRecognition

./: CMakeLists.txt  README.md
PLateDetection_yolov5/: CMakeLists.txt
PLateDetection_yolov5/include/: platedetector_yolov5.h  yolov5plate_preprocess.h
PLateDetection_yolov5/src/: CMakeLists.txt  platedetector_yolov5.cpp  yolov5plate_preprocess.cu
PLateDetection_yolov5/test/: CMakeLists.txt  main.cpp  yolov5plate.onnx  yolov5plate_batch=1.engine
PLateDetection_yolov7/include/: platedetector_yolov7.h  yolov7plate_postprocess.h  yolov7plate_preprocess.h
PLateDetection_yolov7/src/: CMakeLists.txt  platedetector_yolov7.cpp  yolov7plate_postprocess.cu  yolov7plate_preprocess.cu
PLateDetection_yolov7/test/: CMakeLists.txt  main.cpp
PlateDetectionRecognition/include/: PlateDetectionRecognition.h
PlateDetectionRecognition/src/: CMakeLists.txt  PlateDetectionRecognition.cpp
PlateDetectionRecognition/test/: CMakeLists.txt  main.cpp  plate_recognition_color.onnx
PlateRecognition/include/: PlateRecognition.h
PlateRecognition/src/: CMakeLists.txt  PlateRecognition.cpp
PlateRecognition/test/: CMakeLists.txt  main.cpp  plate_recognition_color_batch=1.engine
common/: ONNX2TRT.cpp  ONNX2TRT.h
include/: DataTypes_Plate.h
